--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,100 +2,136 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>GoFoton Chat Assistant</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>GoFoton AI Assistant</title>
   <style>
     body {
-      font-family: sans-serif;
-      background: #f9f9f9;
       margin: 0;
-      padding: 2rem;
-    }
-    #chat {
-      max-width: 600px;
-      margin: 0 auto;
-      background: white;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      padding: 1rem;
-    }
-    .bubble {
-      margin: 1rem 0;
-      padding: 1rem;
-      border-radius: 8px;
-      max-width: 80%;
-    }
-    .user {
-      background: #d0ebff;
-      align-self: flex-end;
-      margin-left: auto;
-    }
-    .bot {
-      background: #f1f3f5;
-      align-self: flex-start;
-      margin-right: auto;
-    }
-    #inputForm {
-      display: flex;
-      margin-top: 1rem;
-    }
-    #question {
-      flex: 1;
-      padding: 0.5rem;
-    }
-    #submitBtn {
-      padding: 0.5rem 1rem;
-    }
-    .chat-log {
+      font-family: 'Inter', 'Helvetica Neue', sans-serif;
+      background-color: #f5f5f5;
+      color: #222;
       display: flex;
       flex-direction: column;
+      height: 100vh;
+    }
+
+    header {
+      background-color: #ba1f1f;
+      color: white;
+      padding: 1rem;
+      font-size: 1.25rem;
+      text-align: center;
+      font-weight: bold;
+    }
+
+    #chat-container {
+      flex: 1;
+      padding: 1rem;
+      overflow-y: auto;
+      display: flex;
+      flex-direction: column;
+      gap: 0.75rem;
+      background-color: #ffffff;
+    }
+
+    .message {
+      max-width: 75%;
+      padding: 0.75rem 1rem;
+      border-radius: 1rem;
+      line-height: 1.4;
+      word-wrap: break-word;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+
+    .user {
+      align-self: flex-end;
+      background-color: #ba1f1f;
+      color: white;
+    }
+
+    .bot {
+      align-self: flex-start;
+      background-color: #f0f0f0;
+      color: #222;
+    }
+
+    #input-form {
+      display: flex;
+      padding: 1rem;
+      background-color: #eaeaea;
+      border-top: 1px solid #ccc;
+    }
+
+    #user-input {
+      flex: 1;
+      padding: 0.75rem;
+      border: 1px solid #ccc;
+      border-radius: 1rem;
+      font-size: 1rem;
+    }
+
+    #send-btn {
+      margin-left: 0.5rem;
+      padding: 0.75rem 1.25rem;
+      background-color: #ba1f1f;
+      color: white;
+      border: none;
+      border-radius: 1rem;
+      font-size: 1rem;
+      cursor: pointer;
+    }
+
+    #send-btn:hover {
+      background-color: #a31b1b;
     }
   </style>
 </head>
 <body>
-  <div id="chat">
-    <h2>GoFoton AI Assistant</h2>
-    <div class="chat-log" id="chatLog"></div>
-    <form id="inputForm">
-      <input type="text" id="question" placeholder="Ask about GoFoton..." required />
-      <button id="submitBtn" type="submit">Send</button>
-    </form>
-  </div>
+  <header>GoFoton AI Assistant</header>
+  <main id="chat-container">
+    <div class="bot message">Hi! I’m the GoFoton AI Assistant. Ask me about our products or solutions.</div>
+  </main>
+  <form id="input-form">
+    <input type="text" id="user-input" placeholder="Ask a question..." autocomplete="off" required />
+    <button type="submit" id="send-btn">Send</button>
+  </form>
 
   <script>
-    const form = document.getElementById('inputForm');
-    const questionInput = document.getElementById('question');
-    const chatLog = document.getElementById('chatLog');
+    const form = document.getElementById('input-form');
+    const input = document.getElementById('user-input');
+    const chat = document.getElementById('chat-container');
+
+    const appendMessage = (text, sender) => {
+      const msg = document.createElement('div');
+      msg.className = `${sender} message`;
+      msg.textContent = text;
+      chat.appendChild(msg);
+      chat.scrollTop = chat.scrollHeight;
+    };
 
     form.addEventListener('submit', async (e) => {
       e.preventDefault();
-      const question = questionInput.value;
-      if (!question.trim()) return;
+      const question = input.value.trim();
+      if (!question) return;
 
-      addMessage(question, 'user');
-      questionInput.value = '';
+      appendMessage(question, 'user');
+      input.value = '';
 
       try {
-        const response = await fetch('https://gofoton-rag.onrender.com/ask', {
+        const res = await fetch('https://gofoton-rag.onrender.com/ask', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ question })
+          body: JSON.stringify({ query: question })
         });
-        const data = await response.json();
-        addMessage(data.answer, 'bot');
+
+        if (!res.ok) throw new Error('Network response was not ok');
+
+        const data = await res.json();
+        appendMessage(data.answer, 'bot');
       } catch (err) {
-        addMessage('Error fetching response. Please try again.', 'bot');
-        console.error(err);
+        appendMessage('⚠️ Error fetching response. Please try again later.', 'bot');
       }
     });
-
-    function addMessage(text, role) {
-      const div = document.createElement('div');
-      div.className = `bubble ${role}`;
-      div.textContent = text;
-      chatLog.appendChild(div);
-      chatLog.scrollTop = chatLog.scrollHeight;
-    }
   </script>
 </body>
 </html>
