--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,12 +16,27 @@
     }
 
     header {
-      background-color: #ba1f1f;
+      background-color: rgb(48, 115, 53);
       color: white;
+      height: 4rem;
       padding: 1rem;
       font-size: 1.25rem;
       text-align: center;
       font-weight: bold;
+    }
+
+    .header-content {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100%;
+      gap: 0.75rem;
+    }
+
+    .header-content img {
+      height: 1.5rem;
+      width: auto;
+      vertical-align: middle;
     }
 
     #chat-container {
@@ -38,6 +53,7 @@
       max-width: 75%;
       padding: 0.75rem 1rem;
       border-radius: 1rem;
+      border: 1px solid #ccc;
       line-height: 1.4;
       word-wrap: break-word;
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
@@ -45,7 +61,7 @@
 
     .user {
       align-self: flex-end;
-      background-color: #ba1f1f;
+      background-color: rgb(48, 115, 53);
       color: white;
     }
 
@@ -73,7 +89,7 @@
     #send-btn {
       margin-left: 0.5rem;
       padding: 0.75rem 1.25rem;
-      background-color: #ba1f1f;
+      background-color: rgb(48, 115, 53);
       color: white;
       border: none;
       border-radius: 1rem;
@@ -82,7 +98,7 @@
     }
 
     #send-btn:hover {
-      background-color: #a31b1b;
+      background-color: rgba(48, 115, 52, 0.6);
     }
   </style>
 </head>
