--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,9 +20,10 @@
       color: white;
       height: 4rem;
       padding: 1rem;
-      font-size: 1.25rem;
+      font-size: 1.75rem;
       text-align: center;
       font-weight: bold;
+      font-style: italic;
     }
 
     .header-content {
@@ -30,7 +31,7 @@
       align-items: center;
       justify-content: center;
       height: 100%;
-      gap: 0.75rem;
+      gap: 2rem;
     }
 
     .header-content img {
@@ -103,7 +104,13 @@
   </style>
 </head>
 <body>
-  <header>GoFoton AI Assistant</header>
+  <header>
+    <div class="header-content">
+      <img src="GoFoton-Logo.png" alt="GoFoton Logo" />
+      <span>AI Assistant</span>
+    </div>
+  </header>
+
   <main id="chat-container">
     <div class="bot message">Hi! I’m the GoFoton AI Assistant. Ask me about our products or solutions.</div>
   </main>
